# ros2_bevy

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  cube.ron
.cargo/: config.toml
assets/: diff_bot.xml  fallback.gltf
assets/example_bot/src/model_pkg/: LICENSE.md  package.xml  setup.cfg  setup.py
assets/example_bot/src/model_pkg/launch/: rviz_config_test_launch.py
assets/example_bot/src/model_pkg/model_pkg/: model.py
assets/example_bot/src/model_pkg/models/: base.dae  base.gltf  base.mtl  caster.mtl  caster_wheel.mtl  diff_bot-BodyBase.glb  diff_bot.FCStd  left_wheel.dae  left_wheel.gltf  right_wheel.dae  right_wheel.gltf
assets/example_bot/src/model_pkg/rviz/: rviz_config_test.rviz
assets/example_bot/src/model_pkg/urdf/: cube.xml  diff_bot.sdf  diff_bot.xml
assets/example_bot/src/model_pkg/worlds/: .xdp_empty_world.sdf.LH64X1  empty_world.sdf
assets/urdfs/: diff_bot.xml
src/: main.rs
src/body/: mod.rs
src/body/cube/: components.rs  mod.rs  resources.rs  systems.rs
src/body/robot/: components.rs  custom_asset_loader_test.rs  mod.rs  plugins.rs  resources.rs  systems.rs
src/body/robot/archive/: ARCHIVESYSTEM.rs  systems(OLDAGAIN).rs  urdf_loader(old).rs  urdf_spawner(OLD).rs
src/body/robot/archive/urdf/: mod.rs
src/body/robot/urdf/: asset_source.rs  components.rs  mod.rs  model_properties.rs  urdf_loader.rs  urdf_spawner.rs  urdf_to_bevy.rs
src/camera/: components.rs  mod.rs  plugins.rs  systems.rs
src/camera_extras/: Cargo.toml
src/camera_extras/src/: components.rs  lib.rs  plugins.rs  systems.rs
src/cameras/: mod.rs  systems.rs
src/component_extras/: Cargo.toml  README.md
src/component_extras/src/: components.rs  lib.rs
src/editor/: components.rs  mod.rs  plugins.rs  prism_test.rs  quad.rs  ramp.rs  systems.rs  ui.rs
src/editor/transform_widget/: components.rs  mod.rs  plugins.rs  systems.rs
src/editor_extras/: Cargo.toml
src/editor_extras/src/: components.rs  lib.rs  plugins.rs  systems.rs  ui.rs
src/editor_extras/src/transform_widget/: components.rs  gizmo_material.rs  plugins.rs  systems.rs
src/inspector/: mod.rs
src/mesh/: example.rs
src/mesh_extras/: Cargo.toml
src/mesh_extras/examples/: ramp_test.rs
src/mesh_extras/src/: components.rs  lib.rs  quad.rs  ramp.rs  systems.rs  triangle.rs
src/serialization/: components.rs  examples.rs  mod.rs  plugins.rs  systems.rs
src/serialization/urdf/: components.rs
src/timers/: mod.rs  plugins.rs  resources.rs
src/ui_extras/: Cargo.toml
src/ui_extras/examples/: comp_visualization_test.rs
src/ui_extras/src/: components.rs  lib.rs  systems.rs
src/urdf/: asset_source.rs  components.rs  mod.rs  model_properties.rs  urdf_loader.rs  urdf_spawner.rs  urdf_to_bevy.rs
src/worlds/: mod.rs  plugins.rs  systems.rs
