[package]
name = "ros2_bevy"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.0"}#, features = ["dynamic_linking"]}
rand = "0.8.5"
# bevy_mod_picking = "0.14.0"
# bevy_flycam = "*"
# bevy_fly_camera = "0.10.0"
bevy-inspector-egui = "0.19.0"
rapier3d = "0.17.2"
bevy_rapier3d = "0.22.0"
bevy_obj = "0.11.0"
urdf-rs = "0.7.1"
bevy_common_assets = {version = "0.7.0", features = ["xml"] }
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.9.21"
serde_json = "*"
bevy_asset_loader = "0.17.0"
thiserror = "1.0.40"
glam = "0.24.0"
ron = "0.8.0"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies.bevy_kira_audio]
version = "0.16"
# `ogg` format support is enabled by default, disable if you don't want it
default-features = false
# enable the features you care about
features = [
  "wav",
  "flac",
  "mp3",
  "ogg",
]

#stuff to fix compile speed for rust, major cause of low speed is linking, and this linker should be faster?
[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
