[package]
name = "editor_extras"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "*"}
rand = "0.8.5"
bevy_mod_raycast = "0.13.1"
bevy-inspector-egui = "0.19.0"
rapier3d = "0.17.2"
bevy_rapier3d = "0.22.0"
bevy_obj = "0.11.0"
urdf-rs = "0.7.1"
thiserror = "1.0.40"
#bevy_text_mesh = "*"
glam = "0.24.0"
ron = "0.8.0"
bevy_egui = "0.21.0"
bevy_window = "0.11.0"
egui = "0.22.0"
#moonshine-save = { git = "https://github.com/Zeenobit/moonshine_save", rev="0ad1b69f966c344159c38c1033d458bf01c3c219"}
#extra_meshes = {path = "../mesh_extras"}
component_extras = {path = "../component_extras"}

[lib]
crate-type=["dylib"]