[package]
name = "mesh_extras"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "*"}
glam = "*"
component_extras = { path = "../component_extras" }
camera_extras = {path = "../camera_extras"}
bevy-inspector-egui = "0.19.0"
egui = "0.22.0"
bevy_egui = "*"
bevy_window = "*"

editor_extras = {path = "../editor_extras"}
ui_extras = {path = "../ui_extras"}
[lib]
crate-type=["lib"]